@@ -118,6 +118,8 @@
    - dtucker@cvs.openbsd.org 2006/08/05 08:34:04
      [packet.c]
      Typo in comment
+ - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Add headers required to compile
+   on Cygwin.
 
 20060804
  - (dtucker) [configure.ac] The "crippled AES" test does not work on recent
@@ -5188,4 +5190,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4469 2006/08/05 08:51:08 dtucker Exp $
+$Id: ChangeLog,v 1.4470 2006/08/05 09:08:16 dtucker Exp $
